src/test/ui/issue-28568.stderr
error[E0119]: conflicting implementations of trait `std::ops::Drop` for type `MyStruct`:
  --> $DIR/issue-28568.rs:17:1
   |
LL | impl Drop for MyStruct {
   | ---------------------- first implementation here
...
LL | impl Drop for MyStruct {
   | ^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MyStruct`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0119"
